fix icon cut off

--- a/prototype/less/page_entire.less
+++ b/prototype/less/page_entire.less
@@ -493,7 +493,7 @@ h1{
   display: block;
   float: left;
   margin-right: @base-unit / 2;
-  margin-top: -1px;
+  margin-top: 0;
   width: @small-icon-size;
 }
 
